Phase 3: NLP search, embedded PDF viewer, role-based access, admin panel, scanned PDF indexing, image PDF auto-delete